--- a/LSDOS1/tsconfig.json
+++ b/LSDOS1/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -14,10 +16,17 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./app/*"],
+      "@/components/*": ["./app/components/*"],
       "@/styles/*": ["./app/styles/*"],
       "@/lib/*": ["./app/lib/*"]
-    }
+    },
+    "plugins": [{ "name": "next" }],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/tailwindcss.d.ts"],
   "exclude": ["node_modules"]
 }
